--- a/src/app/principal/anotacao/lista/lista.component.html
+++ b/src/app/principal/anotacao/lista/lista.component.html
@@ -1,1 +1,85 @@
-<p>lista works!</p>
+<nav class="blue darken-2">
+    <div class="nav-wrapper">
+        <a href="../index.html" class="brand-logo">Smartnote</a>
+        <a href="../materia/materia.html"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
+    </div>
+</nav>
+
+<div>
+    <div class="row">
+        <div class="col s12 m12">
+
+            <div class="row">
+                <div class="container">
+                    <h4 class="center">Anotação 1</h4>
+                    <h5 style="float: right">Matéria 1</h5>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="row">
+                <div class="col s12">
+                    <ul class="tabs">
+                        <li class="tab col s3"><a href="#test1">Imagens</a></li>
+                        <li class="tab col s3"><a class="active" href="#test2">Texto</a></li>
+                        <li class="tab col s3"><a href="#test3">Áudios</a></li>
+                    </ul>
+                </div>
+
+                <div id="test1" class="col s12">
+                    
+                    <div class="row">
+                        <div class="container">
+                            <div class="col s12">
+                                <img class="materialboxed" data-caption="A picture" src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg" style="max-width:100%">
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="container">
+                            <div class="col s12">
+                                <img class="materialboxed" data-caption="A picture" src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg" style="max-width:100%">
+                            </div>
+                        </div>
+                    </div>
+                                    
+
+                </div>
+
+                <div id="test2" class="col s12">
+                    <div class="row">
+                        <div class="container">
+                            <p style="text-align:justify">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed 
+                                est quam, tempus tincidunt orci sed, egestas blandit dolor. 
+                                Praesent tincidunt sem justo, vel cursus justo rutrum vel.
+                                Praesent tempus ex ut tristique dictum. Vivamus auctor
+                                molestie ipsum eu semper. Maecenas mattis suscipit enim
+                                at fermentum. Integer pretium diam eget porta lobortis.
+                                Nullam quis ligula et magna sagittis varius ac eu leo.
+                                Vivamus sem eros, volutpat sit amet dolor nec, dictum
+                                ultrices eros. Maecenas quis arcu ipsum. Curabitur
+                                vestibulum erat est, vitae ultrices ante luctus et. Ut 
+                                lacinia dui sed felis faucibus, vel pretium urna varius.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="test3" class="col s12">
+                    
+                    
+                    
+                </div>
+                
+            <!-- <div class="row">
+                <div class="container">
+                    <p style="text-align:justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est quam, tempus tincidunt orci sed, egestas blandit dolor. Praesent tincidunt sem justo, vel cursus justo rutrum vel. Praesent tempus ex ut tristique dictum. Vivamus auctor molestie ipsum eu semper. Maecenas mattis suscipit enim at fermentum. Integer pretium diam eget porta lobortis. Nullam quis ligula et magna sagittis varius ac eu leo. Vivamus sem eros, volutpat sit amet dolor nec, dictum ultrices eros. Maecenas quis arcu ipsum. Curabitur vestibulum erat est, vitae ultrices ante luctus et. Ut lacinia dui sed felis faucibus, vel pretium urna varius.</p>
+                </div>
+            </div> -->
+
+        </div>
+    </div>
+</div>
