--- a/src/app/principal/categoria/lista/lista.component.html
+++ b/src/app/principal/categoria/lista/lista.component.html
@@ -1,1 +1,91 @@
-<p>lista works!</p>
+<nav class="blue darken-2">
+    <div class="nav-wrapper">
+        <a href="../index.html" class="brand-logo">Smartnote</a>
+        <a href="../index.html"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
+    </div>
+</nav>
+
+<div>
+    <div class="row">
+        <div class="col s12 m12">
+            <h5><a href="materias.html">Matérias</a></h5>
+        </div>
+    </div>
+</div>
+
+<!-- ultimas matérias -->
+<div>
+    
+    <div class="row">
+
+        <div class="col s6 m2">
+            <a href="materia.html">
+            <div class="card">
+                    <div class="card-image">
+                        <img src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg">
+                        <span class="card-title">Matérias 1</span>
+                        <a href="../anotacao/add-anotacao.html" class="btn-floating halfway-fab waves-effect waves-light blue accent-1"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                        <p>Descrição da matéria.</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="col s6 m2">
+            <a href="materia.html">
+            <div class="card">
+                    <div class="card-image">
+                        <img src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg">
+                        <span class="card-title">Matérias 2</span>
+                        <a href="../anotacao/add-anotacao.html" class="btn-floating halfway-fab waves-effect waves-light blue accent-1"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                        <p>Descrição da matéria.</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="col s6 m2">
+            <a href="materia.html">
+            <div class="card">
+                    <div class="card-image">
+                        <img src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg">
+                        <span class="card-title">Matérias 3</span>
+                        <a href="../anotacao/add-anotacao.html" class="btn-floating halfway-fab waves-effect waves-light blue accent-1"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                        <p>Descrição da matéria.</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="col s6 m2">
+            <a href="materia.html">
+            <div class="card">
+                    <div class="card-image">
+                        <img src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg">
+                        <span class="card-title">Matérias 4</span>
+                        <a href="../anotacao/add-anotacao.html" class="btn-floating halfway-fab waves-effect waves-light blue accent-1"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                        <p>Descrição da matéria.</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+
+    </div>
+
+</div>
+
+<!-- Floating button -->
+<div class="fixed-action-btn">
+    <a href="add-materia.html" class="btn-floating btn-large blue accent-1">
+        <i class="large material-icons">add</i>
+    </a>
+</div>
