--- a/src/app/principal/categoria/add/add.component.html
+++ b/src/app/principal/categoria/add/add.component.html
@@ -1,1 +1,45 @@
-<p>add works!</p>
+<nav class="blue darken-2">
+    <div class="nav-wrapper">
+        <a href="../index.html" class="brand-logo">Smartnote</a>
+        <a href="materias.html"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
+    </div>
+</nav>
+
+<div>
+    <div class="row">
+        
+        <div class="col s12 m12">
+            <h5>Criando nova matéria</h5>
+        </div>
+
+        <br>
+
+        <div class="row">
+            <form class="col s12 m12">
+                
+                <div class="row">
+                    
+                    <div class="input-field col s12 m12">
+                        <input id="nome" type="text" class="validate">
+                        <label for="nome" class="">Nome</label>
+                    </div>
+
+                    <div class="input-field col s12 m12">
+                        <input id="professor" type="text" class="validate">
+                        <label for="professor">Professor</label>
+                    </div>
+
+                </div>
+                
+            </form>
+        </div><!--row-->
+
+    </div>
+</div>
+
+<!-- Floating button -->
+<div class="fixed-action-btn">
+    <a class="btn-floating btn-large blue accent-1">
+        <i class="large material-icons">check</i>
+    </a>
+</div>
