--- a/src/app/principal/categoria/categoria.component.html
+++ b/src/app/principal/categoria/categoria.component.html
@@ -1,1 +1,63 @@
-<p>categoria works!</p>
+<nav class="blue darken-2">
+    <div class="nav-wrapper">
+        <a href="../index.html" class="brand-logo">Smartnote</a>
+        <a href="materias.html"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
+    </div>
+</nav>
+
+<div>
+    <div class="row">
+        <div class="parallax-container">
+            <div class="parallax"><img style="opacity: 1;" src="../../images/image.jpg"></div>
+        </div>
+        <div class="col s12 m12">
+            <h5><a href="#!">Matéria 1</a></h5>
+        </div>
+    </div>
+</div>
+
+<!-- lista de anotações -->
+<div>
+    <ul class="collection">
+    
+        <li class="collection-item avatar" style="min-height: 55px !important;">
+            <a href="../anotacao/anotacao.html">
+                <img src="../../images/note.png" style="position:absolute; left:0px; top:5px">
+                <span class="title">Anotação 1</span>
+                </p>
+                <a href="../anotacao/anotacao.html" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
+            </a>
+        </li>
+    
+        <li class="collection-item avatar" style="min-height: 55px !important;">
+            <a href="../anotacao/anotacao.html">
+                <img src="../../images/note.png" style="position:absolute; left:0px; top:5px">
+                <span class="title">Anotação 2</span>
+                </p>
+                <a href="../anotacao/anotacao.html" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
+            </a>
+        </li>
+    
+        <li class="collection-item avatar" style="min-height: 55px !important;">
+            <a href="../anotacao/anotacao.html">
+                <img src="../../images/note.png" style="position:absolute; left:0px; top:5px">
+                <span class="title">Anotação 3</span>
+                </p>
+                <a href="../anotacao/anotacao.html" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
+            </a>
+        </li>
+    
+
+    </ul>
+</div>
+
+<br>
+<br>
+<br>
+
+<!-- Floating button -->
+<div class="fixed-action-btn">
+    <a href="../anotacao/add-anotacao.html" class="btn-floating btn-large blue accent-1">
+        <i class="large material-icons">add</i>
+    </a>
+</div>
