--- a/src/app/principal/geral/geral.component.html
+++ b/src/app/principal/geral/geral.component.html
@@ -25,9 +25,11 @@
                         <span class="card-title">Matéria 1</span>
                     </div>
                 </a>
+
                 <a routerLink="anotacao/add" style="position: absolute; top: 116px;" class="btn-floating halfway-fab waves-effect waves-light blue accent-1">
                     <i class="material-icons">add</i>
                 </a>
+
                 <div class="card-content">
                     <p>Descrição da matéria.</p>
                 </div>
@@ -42,9 +44,11 @@
                         <span class="card-title">Matéria 2</span>
                     </div>
                 </a>
+
                 <a routerLink="anotacao/add" style="position: absolute; top: 116px;" class="btn-floating halfway-fab waves-effect waves-light blue accent-1">
                     <i class="material-icons">add</i>
                 </a>
+
                 <div class="card-content">
                     <p>Descrição da matéria.</p>
                 </div>
@@ -71,7 +75,7 @@
             <a routerLink="anotacao">
                 <img src="assets/img/note.png" style="position:absolute; left:0px; top:5px">
                 <span class="title">Anotação 1</span>
-                <a routerLink="anotacao" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
+                <a routerLink="anotacao" class="secondary-content" style="color:#82b1ff"><i class="material-icons">share</i></a>
             </a>
         </li>
         
@@ -79,7 +83,7 @@
             <a routerLink="anotacao">
                 <img src="assets/img/note.png" style="position:absolute; left:0px; top:5px">
                 <span class="title">Anotação 2</span>
-                <a routerLink="anotacao" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
+                <a routerLink="anotacao" class="secondary-content" style="color:#82b1ff"><i class="material-icons">share</i></a>
             </a>
         </li>
         
@@ -87,7 +91,7 @@
             <a routerLink="anotacao">
                 <img src="assets/img/note.png" style="position:absolute; left:0px; top:5px">
                 <span class="title">Anotação 3</span>
-                <a routerLink="anotacao" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
+                <a routerLink="anotacao" class="secondary-content" style="color:#82b1ff"><i class="material-icons">share</i></a>
             </a>
         </li>
         
@@ -95,10 +99,9 @@
             <a routerLink="anotacao">
                 <img src="assets/img/note.png" style="position:absolute; left:0px; top:5px">
                 <span class="title">Anotação 4</span>
-                <a routerLink="anotacao" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
+                <a routerLink="anotacao" class="secondary-content" style="color:#82b1ff"><i class="material-icons">share</i></a>
             </a>
         </li>
         
-
     </ul>
 </div>
