--- a/src/app/principal/categoria/lista/lista.component.html
+++ b/src/app/principal/categoria/lista/lista.component.html
@@ -1,14 +1,14 @@
 <nav class="blue darken-2">
     <div class="nav-wrapper">
-        <a href="../index.html" class="brand-logo">Smartnote</a>
-        <a href="../index.html"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
+        <p class="brand-logo left">Smartnote</p>
+        <a routerLink="/principal"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
     </div>
 </nav>
 
 <div>
     <div class="row">
         <div class="col s12 m12">
-            <h5><a href="materias.html">Matérias</a></h5>
+            <h5>Matérias</h5>
         </div>
     </div>
 </div>
@@ -23,7 +23,7 @@
             <div class="card">
                     <div class="card-image">
                         <img src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg">
-                        <span class="card-title">Matérias 1</span>
+                        <span class="card-title">Matéria 1</span>
                         <a href="../anotacao/add-anotacao.html" class="btn-floating halfway-fab waves-effect waves-light blue accent-1"><i class="material-icons">add</i></a>
                     </div>
                     <div class="card-content">
@@ -38,7 +38,7 @@
             <div class="card">
                     <div class="card-image">
                         <img src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg">
-                        <span class="card-title">Matérias 2</span>
+                        <span class="card-title">Matéria 2</span>
                         <a href="../anotacao/add-anotacao.html" class="btn-floating halfway-fab waves-effect waves-light blue accent-1"><i class="material-icons">add</i></a>
                     </div>
                     <div class="card-content">
@@ -53,7 +53,7 @@
             <div class="card">
                     <div class="card-image">
                         <img src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg">
-                        <span class="card-title">Matérias 3</span>
+                        <span class="card-title">Matéria 3</span>
                         <a href="../anotacao/add-anotacao.html" class="btn-floating halfway-fab waves-effect waves-light blue accent-1"><i class="material-icons">add</i></a>
                     </div>
                     <div class="card-content">
@@ -68,7 +68,7 @@
             <div class="card">
                     <div class="card-image">
                         <img src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg">
-                        <span class="card-title">Matérias 4</span>
+                        <span class="card-title">Matéria 4</span>
                         <a href="../anotacao/add-anotacao.html" class="btn-floating halfway-fab waves-effect waves-light blue accent-1"><i class="material-icons">add</i></a>
                     </div>
                     <div class="card-content">
