--- a/src/app/principal/categoria/categoria.component.html
+++ b/src/app/principal/categoria/categoria.component.html
@@ -8,7 +8,7 @@
 <div>
     <div class="row">
         <div class="parallax-container">
-            <div class="parallax"><img style="opacity: 1;" src="../../images/image.jpg"></div>
+            <div class="parallax"><img style="opacity: 1;" src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg"></div>
         </div>
         <div class="col s12 m12">
             <h5><a href="#!">Matéria 1</a></h5>
@@ -22,27 +22,24 @@
     
         <li class="collection-item avatar" style="min-height: 55px !important;">
             <a href="../anotacao/anotacao.html">
-                <img src="../../images/note.png" style="position:absolute; left:0px; top:5px">
+                <img src="assets/img/note.png" style="position:absolute; left:0px; top:5px">
                 <span class="title">Anotação 1</span>
-                </p>
                 <a href="../anotacao/anotacao.html" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
             </a>
         </li>
     
         <li class="collection-item avatar" style="min-height: 55px !important;">
             <a href="../anotacao/anotacao.html">
-                <img src="../../images/note.png" style="position:absolute; left:0px; top:5px">
+                <img src="assets/img/note.png" style="position:absolute; left:0px; top:5px">
                 <span class="title">Anotação 2</span>
-                </p>
                 <a href="../anotacao/anotacao.html" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
             </a>
         </li>
     
         <li class="collection-item avatar" style="min-height: 55px !important;">
             <a href="../anotacao/anotacao.html">
-                <img src="../../images/note.png" style="position:absolute; left:0px; top:5px">
+                <img src="assets/img/note.png" style="position:absolute; left:0px; top:5px">
                 <span class="title">Anotação 3</span>
-                </p>
                 <a href="../anotacao/anotacao.html" class="secondary-content" style="color:#82b1ff"><i class="material-icons">send</i></a>
             </a>
         </li>
