--- a/src/app/login/signin/signin.component.html
+++ b/src/app/login/signin/signin.component.html
@@ -22,7 +22,7 @@
                             </div>
 
                             <div class="s12 m12 center">
-                                <a routerLink="principal" class="btn waves-effect waves-light center s12 m12 btn-login light-blue darken-2">
+                                <a routerLink="/principal" class="btn waves-effect waves-light center s12 m12 btn-login light-blue darken-2">
                                     Entrar
                                 </a>
                                 <span class="right link-forgotPassword">Esqueceu a senha?</span>
