--- a/src/app/principal/geral/geral.component.html
+++ b/src/app/principal/geral/geral.component.html
@@ -8,7 +8,7 @@
 <div>
     <div class="row">
         <div class="col s12 m12">
-            <h5><a routerLink="categoria">Matérias</a></h5>
+            <a routerLink="categoria/lista"><h5>Matérias</h5></a>
         </div>
     </div>
 </div>
