--- a/src/app/principal/anotacao/anotacao.component.html
+++ b/src/app/principal/anotacao/anotacao.component.html
@@ -1,7 +1,7 @@
 <nav class="blue darken-2">
     <div class="nav-wrapper">
-        <a href="../index.html" class="brand-logo">Smartnote</a>
-        <a href="../materia/materia.html"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
+        <a routerLink="/principal/categoria" class="brand-logo">Smartnote</a>
+        <a routerLink="/principal/categoria"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
     </div>
 </nav>
 
@@ -70,7 +70,7 @@
 
                 <div id="test3" class="col s12">
                     
-                    
+                    <h5 style="text-align: center;">Em breve!</h5>
                     
                 </div>
                 
