--- a/src/app/principal/anotacao/add/add.component.html
+++ b/src/app/principal/anotacao/add/add.component.html
@@ -1,7 +1,7 @@
 <nav class="blue darken-2">
     <div class="nav-wrapper">
-        <a href="../index.html" class="brand-logo">Smartnote</a>
-        <a href="../materia/materia.html"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
+        <p class="brand-logo">Smartnote</p>
+        <a routerLink="/principal/categoria"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
     </div>
 </nav>
 
