--- a/src/app/principal/categoria/add/add.component.html
+++ b/src/app/principal/categoria/add/add.component.html
@@ -40,6 +40,6 @@
 <!-- Floating button -->
 <div class="fixed-action-btn">
     <a class="btn-floating btn-large blue accent-1">
-        <i class="large material-icons">check</i>
+        <i (click)="onSubmit()" class="large material-icons">check</i>
     </a>
 </div>
